--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -57,8 +57,8 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.0-beta01"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.10"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
 
     //必用library
     implementation 'com.google.code.gson:gson:2.8.6'
